--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,6 +8,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Print Environment Variables
+      run: |
+        echo "GitHub Action Environment Variables:"
+        env
+      
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
@@ -16,25 +21,25 @@ jobs:
       - name: Build
         run: go build -o server
 
-      - name: Archive artifacts
-        run: |
-          mkdir -p artifacts
-          mv server artifacts/
-        if: success()
+      # - name: Archive artifacts
+      #   run: |
+      #     mkdir -p artifacts
+      #     mv server artifacts/
+      #   if: success()
               
-      - name: Log into Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      # - name: Log into Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/golang101:latest
+      # - name: Build Docker image
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ${{ secrets.DOCKER_USERNAME }}/golang101:latest
 
 
 
