--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,7 @@ run-name: Build GoLang Source and Build Docker
 on: [push]
 jobs:
   check-bats-version:
-    runs-on: self-host
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
