--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,10 +1,10 @@
 name: Golang101
 run-name: Build GoLang Source and Build Docker
 on:
-  push:
-    branches:
-      - main
-      - develop
+  # push:
+  #   branches:
+  #     - main
+  #     - develop
     workflow_dispatch:
 jobs:
   check-bats-version:
