--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Test Print Key
         run: echo "${{ steps.tag_name.outputs.tag_name }}"
       
       - name: Set up Go
