--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,28 +11,25 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Test Print Key 1
-        run: echo "${{ steps.tag_name.outputs.tag_name }}"
       
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: '1.20'
               
-      # - name: Log into Docker Hub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      - name: Log into Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      # - name: Build Docker image
-      #   uses: docker/build-push-action@v4
-      #   with:
-      #     context: .
-      #     file: ./Dockerfile
-      #     push: true
-      #     tags: ${{ secrets.DOCKER_USERNAME }}/golang101:latest
+      - name: Build Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/golang101:${{ steps.tag_name.outputs.tag_name }}
 
 
       
