--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Value
-        run: echo "Tag name from github.ref_name: ${{  github.ref_name }}"
+        run: |
+          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
          
       - name: Checkout repository
         uses: actions/checkout@v3
