--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,11 +8,7 @@ on:
 jobs:
   build-and-push-to-docker-hub:
     runs-on: ubuntu-latest
-    steps:
-      - name: Print Value
-        run: |
-          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
-         
+    steps:         
       - name: Checkout repository
         uses: actions/checkout@v3
       
@@ -33,7 +29,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/golang101:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/golang101:${{  github.ref_name }}
 
 
       
