--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,18 +5,19 @@ on:
     branches:
       - main
       - develop
-  # workflow_dispatch:
+    workflow_dispatch:
 jobs:
-  check-bats-version:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # - name: Print Environment Variables
-      #   run: |
-      #     echo "GitHub Action Environment Variables:"
-      #     env
+      - name: Print Environment Variables
+        run: |
+          echo ${{ github.ref }}
+          echo "GitHub Action Environment Variables:"
+          env
       
       - name: Set up Go
         uses: actions/setup-go@v2
@@ -45,6 +46,12 @@ jobs:
       #     file: ./Dockerfile
       #     push: true
       #     tags: ${{ secrets.DOCKER_USERNAME }}/golang101:latest
-
+  
+  test:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Perform Test Build
+        run: echo "Test Build"
 
 
